--- a/apps/src/react-app/index.css
+++ b/apps/src/react-app/index.css
@@ -1,94 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Geist+Mono:wght@100..900&family=Inconsolata:wght@200..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(0.9960 0.0054 183.0350);
-  --foreground: oklch(0.2853 0.0498 184.2174);
-  --card: oklch(0.9920 0.0108 182.8847);
-  --card-foreground: oklch(0.2853 0.0498 184.2174);
-  --popover: oklch(0.9846 0.0212 186.0414);
-  --popover-foreground: oklch(0.2853 0.0498 184.2174);
-  --primary: oklch(0.2853 0.0498 184.2174);
-  --primary-foreground: oklch(0.9846 0.0212 186.0414);
-  --secondary: oklch(0.8338 0.1969 156.2869);
-  --secondary-foreground: oklch(0.2853 0.0498 184.2174);
-  --muted: oklch(0.8639 0.0258 190.5924);
-  --muted-foreground: oklch(0.2695 0.0428 185.0048);
-  --accent: oklch(0.9284 0.1061 177.0474);
-  --accent-foreground: oklch(0.2853 0.0498 184.2174);
-  --destructive: oklch(0.6822 0.1981 32.2961);
-  --destructive-foreground: oklch(0.2367 0.0802 35.0369);
-  --border: oklch(0.2695 0.0428 185.0048);
-  --input: oklch(0.8619 0.0239 186.8410);
-  --ring: oklch(0.5053 0.0889 180.4143);
-  --chart-1: oklch(0.7879 0.1160 183.1662);
-  --chart-2: oklch(0.7945 0.1709 71.1881);
-  --chart-3: oklch(0.7821 0.1361 157.2379);
-  --chart-4: oklch(0.7804 0.1542 132.8334);
-  --chart-5: oklch(0.7859 0.1590 106.7227);
-  --sidebar: oklch(0.9359 0.0182 188.3756);
-  --sidebar-foreground: oklch(0.2853 0.0498 184.2174);
-  --sidebar-primary: oklch(0.2853 0.0498 184.2174);
-  --sidebar-primary-foreground: oklch(0.9846 0.0212 186.0414);
-  --sidebar-accent: oklch(0.9846 0.0212 186.0414);
-  --sidebar-accent-foreground: oklch(0.2853 0.0498 184.2174);
-  --sidebar-border: oklch(0.2853 0.0498 184.2174);
-  --sidebar-ring: oklch(0.2853 0.0498 184.2174);
-  --radius: 0.625rem;
+  --background: oklch(0.9573 0.0074 260.7315);
+  --foreground: oklch(0.1859 0.0157 261.5505);
+  --card: oklch(0.9573 0.0074 260.7315);
+  --card-foreground: oklch(0.1859 0.0157 261.5505);
+  --popover: oklch(0.9573 0.0074 260.7315);
+  --popover-foreground: oklch(0.1859 0.0157 261.5505);
+  --primary: oklch(0.4193 0.0564 272.0732);
+  --primary-foreground: oklch(0.8537 0.0717 264.8461);
+  --secondary: oklch(0.8296 0.0847 273.3689);
+  --secondary-foreground: oklch(0.4863 0.0893 270.3117);
+  --muted: oklch(0.9002 0.0130 266.6932);
+  --muted-foreground: oklch(0.3843 0.0227 271.8152);
+  --accent: oklch(0.8537 0.0717 264.8461);
+  --accent-foreground: oklch(0.1859 0.0157 261.5505);
+  --destructive: oklch(0.5785 0.2138 27.1723);
+  --destructive-foreground: oklch(0.9573 0.0074 260.7315);
+  --border: oklch(0.8529 0.0153 260.7281);
+  --input: oklch(0.8529 0.0153 260.7281);
+  --ring: oklch(0.8296 0.0847 273.3689);
+  --chart-1: oklch(0.8537 0.0717 264.8461);
+  --chart-2: oklch(0.8529 0.0153 260.7281);
+  --chart-3: oklch(0.9002 0.0130 266.6932);
+  --chart-4: oklch(0.4905 0.0298 270.7441);
+  --chart-5: oklch(0.1859 0.0157 261.5505);
+  --sidebar: oklch(0.9600 0.0063 255.4753);
+  --sidebar-foreground: oklch(0.2521 0.0327 263.7208);
+  --sidebar-primary: oklch(0.8537 0.0717 264.8461);
+  --sidebar-primary-foreground: oklch(0.9013 0.0156 257.2001);
+  --sidebar-accent: oklch(0.4863 0.0893 270.3117);
+  --sidebar-accent-foreground: oklch(0.9013 0.0156 257.2001);
+  --sidebar-border: oklch(0.7516 0.0269 261.1287);
+  --sidebar-ring: oklch(0.8537 0.0717 264.8461);
+  --font-sans: Inter;
+  --font-serif: serif;
+  --font-mono: monospace;
+  --radius: 0rem;
   --shadow-x: 0;
   --shadow-y: 0.25rem;
   --shadow-blur: 0.5rem;
   --shadow-spread: 0;
   --shadow-opacity: 0.1;
-  --shadow-color: 0 0 0;
-  --shadow-2xs: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.05);
-  --shadow-xs: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.05);
-  --shadow-sm: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.10), 0 1px 2px -1px hsl(0 0 0 / 0.10);
-  --shadow: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.10), 0 1px 2px -1px hsl(0 0 0 / 0.10);
-  --shadow-md: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.10), 0 2px 4px -1px hsl(0 0 0 / 0.10);
-  --shadow-lg: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.10), 0 4px 6px -1px hsl(0 0 0 / 0.10);
-  --shadow-xl: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.10), 0 8px 10px -1px hsl(0 0 0 / 0.10);
-  --shadow-2xl: 0 0.25rem 0.5rem 0 hsl(0 0 0 / 0.25);
+  --shadow-color: #000000;
+  --shadow-2xs: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.25);
   --tracking-normal: 0;
   --spacing: 0.25rem;
 }
 
 .dark {
-  --background: oklch(0.2853 0.0498 184.2174);
-  --foreground: oklch(0.9846 0.0212 186.0414);
-  --card: oklch(0.2853 0.0498 184.2174);
-  --card-foreground: oklch(0.9846 0.0212 186.0414);
-  --popover: oklch(0.2853 0.0498 184.2174);
-  --popover-foreground: oklch(0.9846 0.0212 186.0414);
-  --primary: oklch(0.9846 0.0212 186.0414);
-  --primary-foreground: oklch(0.2853 0.0498 184.2174);
-  --secondary: oklch(0.8334 0.1491 161.2700);
-  --secondary-foreground: oklch(0.3070 0.0630 159.5714);
-  --muted: oklch(0.3444 0.0282 185.3398);
-  --muted-foreground: oklch(0.7434 0.0281 184.9028);
-  --accent: oklch(0.9284 0.1061 177.0474);
-  --accent-foreground: oklch(0.2853 0.0498 184.2174);
-  --destructive: oklch(0.4128 0.1628 28.3820);
-  --destructive-foreground: oklch(0.9846 0.0212 186.0414);
-  --border: oklch(0.5032 0.0462 184.0046);
-  --input: oklch(0.5032 0.0462 184.0046);
-  --ring: oklch(0.9846 0.0212 186.0414);
-  --chart-1: oklch(0.7879 0.1160 183.1662);
-  --chart-2: oklch(0.7945 0.1709 71.1881);
-  --chart-3: oklch(0.7821 0.1361 157.2379);
-  --chart-4: oklch(0.7804 0.1542 132.8334);
-  --chart-5: oklch(0.7859 0.1590 106.7227);
-  --sidebar: oklch(0.3996 0.0355 185.0079);
-  --sidebar-foreground: oklch(0.9846 0.0212 186.0414);
-  --sidebar-primary: oklch(0.9284 0.1061 177.0474);
-  --sidebar-primary-foreground: oklch(0.2853 0.0498 184.2174);
-  --sidebar-accent: oklch(0.3444 0.0282 185.3398);
-  --sidebar-accent-foreground: oklch(0.9846 0.0212 186.0414);
-  --sidebar-border: oklch(0.5032 0.0462 184.0046);
-  --sidebar-ring: oklch(0.9284 0.1061 177.0474);
+  --background: oklch(0.1859 0.0157 261.5505);
+  --foreground: oklch(0.9573 0.0074 260.7315);
+  --card: oklch(0.1859 0.0157 261.5505);
+  --card-foreground: oklch(0.9573 0.0074 260.7315);
+  --popover: oklch(0.1859 0.0157 261.5505);
+  --popover-foreground: oklch(0.9573 0.0074 260.7315);
+  --primary: oklch(0.8537 0.0717 264.8461);
+  --primary-foreground: oklch(0.1859 0.0157 261.5505);
+  --secondary: oklch(0.4193 0.0564 272.0732);
+  --secondary-foreground: oklch(0.9573 0.0074 260.7315);
+  --muted: oklch(0.4193 0.0564 272.0732);
+  --muted-foreground: oklch(0.7144 0.0187 264.4494);
+  --accent: oklch(0.8537 0.0717 264.8461);
+  --accent-foreground: oklch(0.1859 0.0157 261.5505);
+  --destructive: oklch(0.3901 0.1298 25.5873);
+  --destructive-foreground: oklch(0.9573 0.0074 260.7315);
+  --border: oklch(0.4905 0.0298 270.7441);
+  --input: oklch(0.4905 0.0298 270.7441);
+  --ring: oklch(0.8537 0.0717 264.8461);
+  --chart-1: oklch(0.8537 0.0717 264.8461);
+  --chart-2: oklch(0.8529 0.0153 260.7281);
+  --chart-3: oklch(0.9002 0.0130 266.6932);
+  --chart-4: oklch(0.4905 0.0298 270.7441);
+  --chart-5: oklch(0.1859 0.0157 261.5505);
+  --sidebar: oklch(0.2615 0.0261 255.7530);
+  --sidebar-foreground: oklch(0.9573 0.0074 260.7315);
+  --sidebar-primary: oklch(0.8537 0.0717 264.8461);
+  --sidebar-primary-foreground: oklch(0.1859 0.0157 261.5505);
+  --sidebar-accent: oklch(0.4193 0.0564 272.0732);
+  --sidebar-accent-foreground: oklch(0.9573 0.0074 260.7315);
+  --sidebar-border: oklch(0.4905 0.0298 270.7441);
+  --sidebar-ring: oklch(0.8537 0.0717 264.8461);
+  --font-sans: Inter;
+  --font-serif: serif;
+  --font-mono: monospace;
+  --radius: 0rem;
+  --shadow-x: 0;
+  --shadow-y: 0.5rem;
+  --shadow-blur: 0.75rem;
+  --shadow-spread: 0;
+  --shadow-opacity: 0.2;
+  --shadow-color: #000000;
+  --shadow-2xs: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.10);
+  --shadow-xs: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.10);
+  --shadow-sm: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.20), 0 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.20), 0 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow-md: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.20), 0 2px 4px -1px hsl(0 0% 0% / 0.20);
+  --shadow-lg: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.20), 0 4px 6px -1px hsl(0 0% 0% / 0.20);
+  --shadow-xl: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.20), 0 8px 10px -1px hsl(0 0% 0% / 0.20);
+  --shadow-2xl: 0 0.5rem 0.75rem 0 hsl(0 0% 0% / 0.50);
 }
 
 @theme inline {
@@ -116,10 +137,6 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
@@ -128,33 +145,31 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --font-sans: 'Inconsolata', sans-serif;
-  --font-mono: 'Fira Code', monospace;
-  --font-serif: 'Playfair Display', serif;
-  --radius: 0.625rem;
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
   --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
   --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
   --tracking-wider: calc(var(--tracking-normal) + 0.05em);
   --tracking-widest: calc(var(--tracking-normal) + 0.1em);
-  --tracking-normal: var(--tracking-normal);
-  --shadow-2xl: var(--shadow-2xl);
-  --shadow-xl: var(--shadow-xl);
-  --shadow-lg: var(--shadow-lg);
-  --shadow-md: var(--shadow-md);
-  --shadow: var(--shadow);
-  --shadow-sm: var(--shadow-sm);
-  --shadow-xs: var(--shadow-xs);
-  --shadow-2xs: var(--shadow-2xs);
-  --spacing: var(--spacing);
-  --letter-spacing: var(--letter-spacing);
-  --shadow-offset-y: var(--shadow-offset-y);
-  --shadow-offset-x: var(--shadow-offset-x);
-  --shadow-spread: var(--shadow-spread);
-  --shadow-blur: var(--shadow-blur);
-  --shadow-opacity: var(--shadow-opacity);
-  --color-shadow-color: var(--shadow-color);
-  --shadow-color: var(--shadow-color);
 }
 
 @layer base {
